errors fixed in Converter, added test folder and its first content

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,8 @@ set(CMAKE_CXX_STANDARD 14)
 
 
 add_subdirectory(Converter)
-add_executable(search_project main.cpp)
+add_subdirectory(InvertedIndex)
+add_executable(search_project main.cpp test/Converter_test.cpp test/InvertedIndex_test.cpp test/SearchServer_test.cpp test/main.cpp)
 
 #target_link_libraries(search_project PRIVATE gtest_main)
 #include(GoogleTest)
