--- a/InvertedIndex/CMakeLists.txt
+++ b/InvertedIndex/CMakeLists.txt
@@ -1,3 +1,3 @@
 file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp)
-add_library(InvertedIndex static ${SOURCES})
+add_library(InvertedIndex ${SOURCES})
 target_include_directories (InvertedIndex PUBLIC include)
