tries to add tests

--- a/InvertedIndex/CMakeLists.txt
+++ b/InvertedIndex/CMakeLists.txt
@@ -1,3 +1,4 @@
-file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp)
+#file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp)
+set(SOURCES include/InvertedIndex.h src/InvertedIndex.cpp)
 add_library(InvertedIndex ${SOURCES})
 target_include_directories (InvertedIndex PUBLIC include)
