--- a/SearchServer/CMakeLists.txt
+++ b/SearchServer/CMakeLists.txt
@@ -1,3 +1,6 @@
-file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp)
-add_library(SearchServer static ${SOURCES})
-target_include_directories (SearchServer PUBLIC include)
+#file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp)
+set(SOURCES include/SearchServer.h src/SearchServer.cpp)
+add_library(SearchServer ${SOURCES})
+#include_directories(../InvertedIndex)
+target_link_libraries(SearchServer InvertedIndex)
+target_include_directories (SearchServer PUBLIC include ${PROJECT_SOURCE_DIR}/InvertedIndex)
