--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,17 @@ cmake_minimum_required(VERSION 3.21)
 project(search_project)
 
 set(CMAKE_CXX_STANDARD 14)
-#set(CMAKE_CXX_COMPILER C:/msys64/mingw64/bin/g++.exe )
-#set(CMAKE_C_COMPILER C:/msys64/mingw64/bin/gcc.exe )
 
-#include_directories(Converter InvertedIndex SearchServer)
+
+include(FetchContent)
+FetchContent_Declare(
+        googletest
+        URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
+)
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+enable_testing()
+
 add_subdirectory(Converter)
 add_subdirectory(InvertedIndex)
 add_subdirectory(SearchServer)
