all standard tests pass

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,7 +12,7 @@ if (NOT (TARGET gtest AND TARGET gtest_main))
     message(FATAL_ERROR "gtest and gtest_main targets NOT found")
 endif()
 
-add_executable(${TEST_PROJECT_NAME} main.cpp InvertedIndex_test.cpp)
+add_executable(${TEST_PROJECT_NAME} main.cpp InvertedIndex_test.cpp Converter_test.cpp SearchServer_test.cpp)
 target_link_libraries(${TEST_PROJECT_NAME} gtest gtest_main Converter InvertedIndex SearchServer)
 
 add_test(${TEST_PROJECT_NAME} ${TEST_PROJECT_NAME})
