fixing cmake vars parsing in main.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(search_engine VERSION "0.0.9.2")
 
 set(CMAKE_CXX_STANDARD 17)
 
-configure_file(cmake_var_parsing_in.h cmake_var_parsing_in.h)
+configure_file(cmake_var_parsing.h.in cmake_var_parsing.h @ONLY)
 
 include(FetchContent)
 FetchContent_Declare(
@@ -26,8 +26,8 @@ add_subdirectory(Converter)
 add_subdirectory(InvertedIndex)
 add_subdirectory(SearchServer)
 add_subdirectory(test)
-add_executable(search_engine main.cpp cmake_var_parsing_in.h)
-
+add_executable(search_engine main.cpp cmake_var_parsing.h)
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(search_engine Converter InvertedIndex SearchServer CLI11::CLI11)
 
 
