added documentation fixed bug with testd in InvertedIndex through sorting freq_dictionary added new ConverterJSON test for check version

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,7 +9,14 @@ if (NOT (TARGET gtest AND TARGET gtest_main))
 endif()
 
 add_executable(${TEST_PROJECT_NAME} main.cpp InvertedIndex_test.cpp Converter_test.cpp SearchServer_test.cpp)
+add_executable(Converter_test main.cpp Converter_test.cpp)
+add_executable(InvertedIndex_test main.cpp InvertedIndex_test.cpp)
+add_executable(SearchServer_test main.cpp SearchServer_test.cpp)
+
 target_link_libraries(${TEST_PROJECT_NAME} gtest gtest_main Converter InvertedIndex SearchServer nlohmann_json::nlohmann_json)
+target_link_libraries(Converter_test gtest gtest_main Converter SearchServer nlohmann_json::nlohmann_json)
+target_link_libraries(InvertedIndex_test gtest gtest_main Converter InvertedIndex)
+target_link_libraries(SearchServer_test gtest gtest_main InvertedIndex SearchServer)
 
 add_test(${TEST_PROJECT_NAME} ${TEST_PROJECT_NAME})
 
