--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-set(SOURCES include/Converter.h src/Converter.cpp)
+set(SOURCES src/Converter.cpp)
 include(FetchContent)
 FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.10.5/json.tar.xz)
 FetchContent_MakeAvailable(json)
