--- a/InvertedIndex/CMakeLists.txt
+++ b/InvertedIndex/CMakeLists.txt
@@ -1,3 +1,3 @@
-set(SOURCES include/InvertedIndex.h src/InvertedIndex.cpp)
+set(SOURCES src/InvertedIndex.cpp)
 add_library(InvertedIndex ${SOURCES})
 target_include_directories (InvertedIndex PUBLIC include)
